tests/baselines/reference/stringLiteralsAssertionsInEqualityComparisons02.errors.txt
tests/cases/conformance/types/literal/stringLiteralsAssertionsInEqualityComparisons02.ts(5,19): error TS2352: Type 'string' cannot be converted to type 'number'.


==== tests/cases/conformance/types/literal/stringLiteralsAssertionsInEqualityComparisons02.ts (1 errors) ====
    type EnhancedString = string & { enhancements: any };
    
    var a = "foo" === "bar" as "baz";
    var b = "foo" !== ("bar" as "foo");
    var c = "foo" == (<number>"bar");
                      ~~~~~~~~~~~~~
!!! error TS2352: Type 'string' cannot be converted to type 'number'.
    var d = "foo" === ("bar" as EnhancedString);